--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,11 @@
             <version>5.8.1</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>5.14.2</version>
+        </dependency>
     </dependencies>
 
 </project>
