--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -8,19 +8,14 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up JDK 23
-      uses: actions/setup-java@v4
-      with:
-        java-version: '23'
-        distribution: 'temurin'
-        cache: maven
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
-
-    - name: Update dependency graph
-      uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
+      - uses: actions/checkout@v4
+      - uses: actions/setup-java@v4.2.1
+        with:
+          distribution: 'temurin'
+          java-version: '23'
+          cache: 'maven'
+      - name: Build with Maven, run tests
+        run: mvn clean install -DskipTests=false
