--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -17,5 +17,9 @@ jobs:
           distribution: 'temurin'
           java-version: '23'
           cache: 'maven'
-      - name: Build with Maven, run tests
-        run: mvn clean install -DskipTests=false
+      - name: Build with Maven
+        run: mvn clean install -DskipTests=true
+
+      - name: Run tests with Maven
+        run: mvn test
+
