#9: fix:Changes in maven.yml Co-authored-by: Valentin Somoza <vsomoza@fi.uba.ar> Co-authored-by: Juan Balella <jbalella@fi.uba.ar> Co-authored-by: Guiseppe Prieto Bonilla <gprietob@fi.uba.ar> Co-authored-by: Matias <mbagatto@fi.uba.ar>

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -17,7 +17,7 @@ jobs:
           distribution: 'temurin'
           java-version: '23'
           cache: 'maven'
-      - name: Build with
+      - name: Build
         run: mvn clean install -DskipTests=true
 
       - name: Run tests
